--- a/src/model_training.ipynb
+++ b/src/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0d41c53d-93f8-4db5-b499-cd085185938a",
    "metadata": {},
    "outputs": [
@@ -10,11 +10,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|█████████████████████████████████████████████████████████████████| 800/800 [00:00<00:00, 21023.55 examples/s]\n",
-      "Map: 100%|█████████████████████████████████████████████████████████████████| 200/200 [00:00<00:00, 12329.12 examples/s]\n",
+      "C:\\Users\\dangk\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "C:\\Users\\dangk\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py:14: UserWarning: A NumPy version >=1.22.4 and <2.3.0 is required for this version of SciPy (detected version 2.3.3)\n",
+      "  from scipy.sparse import csr_matrix, issparse\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\dangk\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|█████████████████████████████████████████████████████████████████| 800/800 [00:00<00:00, 14735.21 examples/s]\n",
+      "Map: 100%|█████████████████████████████████████████████████████████████████| 200/200 [00:00<00:00, 13613.45 examples/s]\n",
       "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight', 'pre_classifier.bias', 'pre_classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "C:\\Users\\dangk\\AppData\\Local\\Temp\\ipykernel_7500\\817983437.py:83: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "C:\\Users\\dangk\\AppData\\Local\\Temp\\ipykernel_14536\\2781777688.py:83: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
       "  trainer = Trainer(\n",
       "C:\\Users\\dangk\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torch\\utils\\data\\dataloader.py:668: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
       "  warnings.warn(warn_msg)\n"
@@ -27,7 +45,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='400' max='400' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [400/400 02:15, Epoch 4/4]\n",
+       "      [400/400 02:17, Epoch 4/4]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -56,7 +74,6 @@
     }
    ],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "from datasets import Dataset\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -65,20 +82,20 @@
     "import numpy as np\n",
     "\n",
     "# 1. Load dataset\n",
-    "df = pd.read_csv(\"intent_dataset_1000.csv\")\n",
+    "df = pd.read_csv(\"../data/intent_dataset_1000.csv\")\n",
     "\n",
-    "# ✅ Clean & ensure labels are strings\n",
+    "# Clean & ensure labels are strings\n",
     "df[\"label\"] = df[\"label\"].astype(str).str.strip().str.lower()\n",
     "\n",
-    "# ✅ Build label mappings\n",
+    "# Build label mappings\n",
     "labels = sorted(df[\"label\"].unique())\n",
     "label2id = {l: i for i, l in enumerate(labels)}\n",
     "id2label = {i: l for l, i in label2id.items()}\n",
     "\n",
-    "# ✅ Map to numeric labels (INTS, not lists)\n",
+    "# Map to numeric labels (INTS, not lists)\n",
     "df[\"labels\"] = df[\"label\"].map(label2id).astype(int)\n",
     "\n",
-    "# ✅ Ensure \"text\" column is string\n",
+    "# Ensure \"text\" column is string\n",
     "df[\"text\"] = df[\"text\"].astype(str)\n",
     "\n",
     "# 2. Train-test split (no stratify needed)\n",
@@ -96,7 +113,7 @@
     "    return tokenizer(\n",
     "        batch[\"text\"],\n",
     "        truncation=True,\n",
-    "        padding=True   # ✅ Important\n",
+    "        padding=True   # Important\n",
     "    )\n",
     "\n",
     "train_ds = train_ds.map(tokenize, batched=True)\n",
@@ -123,13 +140,13 @@
     "\n",
     "# 7. Training arguments (no evaluation_strategy for older versions)\n",
     "args = TrainingArguments(\n",
-    "    output_dir=\"intent_model\",\n",
+    "    output_dir=\"../intent_model\",\n",
     "    learning_rate=5e-5,\n",
     "    per_device_train_batch_size=8,\n",
     "    per_device_eval_batch_size=8,\n",
     "    num_train_epochs=4,\n",
     "    weight_decay=0.01,\n",
-    "    logging_dir=\"./logs\"\n",
+    "    logging_dir=\"../logs\"\n",
     ")\n",
     "\n",
     "# 8. Metrics\n",
@@ -161,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e01fb92d-4683-4012-a3f5-52798f2c5d71",
    "metadata": {},
    "outputs": [
@@ -176,15 +193,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'label': 'count', 'score': 0.9977505803108215}]\n",
-      "[{'label': 'aggregate', 'score': 0.9982763528823853}]\n",
-      "[{'label': 'filter', 'score': 0.998335063457489}]\n",
-      "[{'label': 'compare', 'score': 0.9981133937835693}]\n",
-      "[{'label': 'trend', 'score': 0.9980431795120239}]\n"
+      "[{'label': 'count', 'score': 0.9978487491607666}]\n",
+      "[{'label': 'aggregate', 'score': 0.9985129237174988}]\n",
+      "[{'label': 'filter', 'score': 0.9985072016716003}]\n",
+      "[{'label': 'compare', 'score': 0.9983828067779541}]\n",
+      "[{'label': 'trend', 'score': 0.9976175427436829}]\n"
      ]
     }
    ],
    "source": [
+    "# Test after trained\n",
     "from transformers import pipeline\n",
     "\n",
     "clf = pipeline(\"text-classification\", model=\"intent_model\", tokenizer=\"intent_model\")\n",
